--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "Mentors Management system is a people management app that enables proper",
   "bin": "bin/createNodejsApp.js",
   "main": "index.js",
+  "type": "module",
   "repository": "https://github.com:ALCOpenSource/Mentor-Management-System-Team-4.git",
   "author": "Martins Aloba",
   "license": "MIT",
