--- a/frontend/mms-Admin/package.json
+++ b/frontend/mms-Admin/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.13.1",
     "@mui/styles": "^5.12.0",
     "@mui/utils": "^5.12.0",
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@tinymce/tinymce-react": "^4.3.0",
     "aphrodite": "^2.4.0",
@@ -26,6 +27,7 @@
     "formik": "^2.2.9",
     "js-cookie": "^3.0.5",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
